Fixed overflow issues

--- a/css/github-activity.css
+++ b/css/github-activity.css
@@ -9,7 +9,7 @@
 
 .gha-feed {
     width: 100%;
-    height: 500px;
+    height: 537px;
     background: #fff;
     font-weight: bold;
     font-size: 14px;
